added recuriment menu in contact page

--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,7 @@
               <li><a href="devSecOps.html"><i class="bi bi-shield-lock"></i><span>DevSecOps</span></a>
               </li>
               <li><a href="testing.html"><i class="bi bi-bug"></i><span>Testing and QA</span></a></li>
+              <li><a href="recruitment.html"><i class="bi bi-person-check"></i><span>Recruitment</span></a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><i class="bi bi-info-circle"></i><span>About</span><i
