corrected devsecops route in the aw-solution-architect,contanct and testing menu

--- a/aws-solution-architect.html
+++ b/aws-solution-architect.html
@@ -125,7 +125,7 @@
                                         Development</span></a></li>
                             <li><a href="aws-solution-architect.html"><i class="bi bi-cloud"></i><span>AWS Solution
                                         Architects</span></a></li>
-                            <li><a href="devSecOps.html"><i class="bi bi-shield-lock"></i><span>DevSecOps</span></a>
+                            <li><a href="devsecops.html"><i class="bi bi-shield-lock"></i><span>DevSecOps</span></a>
                             </li>
                             <li><a href="testing.html"><i class="bi bi-bug"></i><span>Testing and
                                         QA</span></a></li>
