added spaces in the comma and full stop

--- a/mission.html
+++ b/mission.html
@@ -112,8 +112,8 @@
                 <div class="col-lg-6 animate__animated animate__fadeInRight mt-4 mt-lg-0 about-text-container">
                     <h1 class="mission-heading">Our Mission</h1>
                     <p class="about-text">Our mission is to empower businesses by enhancing efficiency through
-                        innovative products and services.We are committed to continuous innovation, integrity,
-                        availability and reliability.</p>
+                        innovative products and services. We are committed to continuous innovation, integrity,
+                        availability, and reliability.</p>
                     <ul style="list-style: none; padding-left: 0;" class="about-text">
                         <p class="about-text">We specialize in:</p>
                         <li><i class="bi bi-laptop-fill" style="color:#0C356A;"></i>&nbsp;Software Development</li>
@@ -124,7 +124,7 @@
                         <li><i class="bi bi-file-lock-fill" style="color:#0C356A;"></i>&nbsp;Test Automation</li>
                     </ul>
                     <p style="margin-top: 20px;" class="about-text">Our skilled consultants ensures seamless
-                        user experiences and reliable applications,consistently delivering high-quality solutions that
+                        user experiences and reliable applications, consistently delivering high-quality solutions that
                         enable our clients to achieve their goals and stay competitive.
                     </p>
                 </div>
