improved the view of contact page and index page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);" data-bs-interval="5000">
+        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);"
+          data-bs-interval="5000">
           <div class="carousel-container animate__animated animate__fadeInLeft">
             <div class="text-overlay"
               style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; background-color: rgba(0, 0, 0, 0.5); padding: 20px; border-top: 10px solid #007bff;">
@@ -147,7 +148,7 @@
   <main id="main">
 
     <!-- ======= About Us Section ======= -->
-    <section id="about-us" class="about-us">
+    <section id="about-us" class="about-us" style="padding: 60px 0;">
       <div class="container" data-aos="fade-up">
 
         <div class="row content">
